[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-media-engine"
version = "1.0.0"
license = { text = "MIT" }
description = "DSL-driven media generation engine with FFmpeg rendering, plugin system, and provenance tracking"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
all = ["moviepy>=1.0", "diffusers>=0.25", "torch>=2.0"]

[project.urls]
homepage = "https://github.com/genesis-media-engine/genesis"
repository = "https://github.com/genesis-media-engine/genesis"
documentation = "https://genesis-media-engine.readthedocs.io"

[project.scripts]
genesis = "genesis.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
